source/objects/SolarBot_Status__c.object
<CustomObject>
    <fields>
        <fullName>Kilowatt_Hours__c</fullName>
        <label>Kilowatt Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Maintenance Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Panel_Temperature__c</fullName>
        <label>Panel Temperature</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Obscured__c</fullName>
        <label>Percent Obscured</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SolarBot__c</fullName>
        <label>SolarBot</label>
        <referenceTo>SolarBot__c</referenceTo>
        <relationshipLabel>SolarBot Status</relationshipLabel>
        <relationshipName>SolarBot_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <label>SolarBot Status</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB Status-{0000}</displayFormat>
        <label>SolarBot Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SolarBot Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>